Add fixed positioning to some table header elements.  Pthh.  Doesn't work.

--- a/Downloads/FingertipFormulary-FormularyDataEntry-Plans-45.html
+++ b/Downloads/FingertipFormulary-FormularyDataEntry-Plans-45.html
@@ -384,44 +384,45 @@ function openWindow(winSrc,w,h) {
 		
 		
 
-		<tbody><tr align="center" valign="middle">
-			<td colspan="7" align="left"><b>1797</b>&nbsp; Plans found.</td>
-			<td colspan="9" align="right">Page <b>1</b> of <b>60</b></td>
+    <tbody>
+    <tr align="center" valign="middle" style="position:fixed;">
+			<td colspan="7" align="left" style="position:fixed;"><b>1797</b>&nbsp; Plans found.</td>
+			<td colspan="9" align="right" style="position:fixed;">Page <b>1</b> of <b>60</b></td>
 		</tr>
-		<tr align="center" valign="middle" bgcolor="silver">
-			<td class="btrow" align="center" nowrap="" colspan="21" valign="middle">
+		<tr align="center" valign="middle" bgcolor="silver" style="position:fixed;">
+			<td class="btrow" align="center" nowrap="" colspan="21" valign="middle" style="position:fixed;">
 			
 				<input type="submit" name="submit" value="Next">&nbsp; <br>
 				
 			</td>
 		</tr>
 		<tr bgcolor="Orange">
-			<td class="frmTopL" align="center" valign="top" rowspan="2" colspan="2">Health Plan</td>
-			<td class="frmTopL" rowspan="2">Notes</td>
-			<td class="divfrmTop" align="center" colspan="9">Tier</td>
-			<td class="divfrmTop" align="center" colspan="4">Restrictions</td>
-			<td class="divfrmTop" align="center" colspan="2">Pref</td>
-			<td class="divfrmTop" align="center" colspan="1">&nbsp;</td>
-			<td class="divfrmTop" align="center" rowspan="2">Reason Code</td>
-			<td class="divfrmTop" align="center" rowspan="2">Restriction Comments</td>
+			<td style="position:fixed;" class="frmTopL" align="center" valign="top" rowspan="2" colspan="2">Health Plan</td>
+			<td style="position:fixed;" class="frmTopL" rowspan="2">Notes</td>
+			<td style="position:fixed;" class="divfrmTop" align="center" colspan="9">Tier</td>
+			<td style="position:fixed;" class="divfrmTop" align="center" colspan="4">Restrictions</td>
+			<td style="position:fixed;" class="divfrmTop" align="center" colspan="2">Pref</td>
+			<td style="position:fixed;" class="divfrmTop" align="center" colspan="1">&nbsp;</td>
+			<td style="position:fixed;" class="divfrmTop" align="center" rowspan="2">Reason Code</td>
+			<td style="position:fixed;" class="divfrmTop" align="center" rowspan="2">Restriction Comments</td>
 		</tr>
 		<tr bgcolor="Orange" align="center" valign="middle">
-			<td class="frmBotL">1</td>
-			<td class="frmBotL">2</td>
-			<td class="frmBotL">3</td>
-			<td class="frmBotL">4</td>
-			<td class="frmBotL">5</td>
-			<td class="frmBotL">6</td>
-			<td class="frmBotL">7</td>
-			<td class="frmBotL">NC</td>
-			<td class="frmBotL">N/A</td>
-			<td class="divfrmBot">PA</td>
-			<td class="frmBotL">QL</td>
-			<td class="frmBotL">ST</td>
-			<td class="frmBotL">OR</td>
-			<td class="frmBotL">P</td>
-			<td class="frmBotL">NP</td>
-			<td class="frmBotSpanR">SP</td>
+			<td style="position:fixed;" class="frmBotL">1</td>
+			<td style="position:fixed;" class="frmBotL">2</td>
+			<td style="position:fixed;" class="frmBotL">3</td>
+			<td style="position:fixed;" class="frmBotL">4</td>
+			<td style="position:fixed;" class="frmBotL">5</td>
+			<td style="position:fixed;" class="frmBotL">6</td>
+			<td style="position:fixed;" class="frmBotL">7</td>
+			<td style="position:fixed;" class="frmBotL">NC</td>
+			<td style="position:fixed;" class="frmBotL">N/A</td>
+			<td style="position:fixed;" class="divfrmBot">PA</td>
+			<td style="position:fixed;" class="frmBotL">QL</td>
+			<td style="position:fixed;" class="frmBotL">ST</td>
+			<td style="position:fixed;" class="frmBotL">OR</td>
+			<td style="position:fixed;" class="frmBotL">P</td>
+			<td style="position:fixed;" class="frmBotL">NP</td>
+			<td style="position:fixed;" class="frmBotSpanR">SP</td>
 		</tr>
 
 	
