4115A - Formulary Collection Process - additional clean-up items
More adjustments to the CSS hardcoded widths.  Why the fsck does
Chrome change the width on the tier columns?!
Tried setting the classname for the first *AND* last rows -
thinking that the rendering engine wouldn't muck with the td
element width after recognizing the CSS class at the table's
last row.

This means war.  Next up: What if we get rid of the colspan attribute ...

--- a/Downloads/FingertipFormulary-FormularyDataEntry-Plans-45.html
+++ b/Downloads/FingertipFormulary-FormularyDataEntry-Plans-45.html
@@ -372,8 +372,8 @@ function openWindow(winSrc,w,h) {
 			<td class="scrolling-table-restriction-comments-td divfrmTop" align="center" rowspan="2">Restriction Comments</td>
 		</tr>
 		<tr class="topOrangeHeaderRow2" bgcolor="Orange" align="center" valign="middle">
-			<td class="scrolling-table-health-plan-td frmBotL">1</td>
-			<td class="scrolling_table-notes-td frmBotL">2</td>
+			<td class="scrolling-table-nbsp-td frmBotL">1</td>
+			<td class="scrolling_table-nbsp-td frmBotL">2</td>
 			<td class="scrolling_table-nbsp-td frmBotL">3</td>
 			<td class="scrolling_table-nbsp-td frmBotL">4</td>
 			<td class="scrolling_table-nbsp-td frmBotL">5</td>
@@ -397,7 +397,7 @@ function openWindow(winSrc,w,h) {
 		<tr class="Odd">
 			<td class="scrolling-table-health-plan-td lbdyOrg" nowrap="">2028</td>
 			<td class="scrolling-table-notes-td bdyOrg" style="text-transform:capitalize;">1199 SEIU&nbsp;</td>
-			<td nowrap="" class="bdyOrg" style="text-align: center;">
+			<td nowrap="" class="scrolling-table-nbsp-td bdyOrg" style="text-align: center;">
 				-
 			</td>
 			<td class="scrolling-table-nbsp-td bdyOrg"><input type="radio" name="CoverageStatus_2028" value="1"></td>
@@ -2425,32 +2425,32 @@ function openWindow(winSrc,w,h) {
 		<input type="hidden" name="PlanID" value="4777"> 
 
 		<tr class="Even">
-			<td class="lbdyOrg" nowrap="">4118</td>
-			<td class="bdyOrg" style="text-transform:capitalize;">Advantra HMO/POS (Coventry)&nbsp;</td>
-			<td nowrap="" class="bdyOrg" style="text-align: center;">
+			<td class="scrolling-table-health-plan-td lbdyOrg" nowrap="">4118</td>
+			<td class="scrolling-table-notes-td bdyOrg" style="text-transform:capitalize;">Advantra HMO/POS (Coventry)&nbsp;</td>
+			<td nowrap="" class="scrolling-table-nbsp-td bdyOrg" style="text-align: center;">
 				-
 			</td>
-			<td class="bdyOrg"><input type="radio" name="CoverageStatus_4118" value="1"></td>
-			<td class="bdyOrg"><input type="radio" name="CoverageStatus_4118" value="2"></td>
-			<td class="bdyOrg"><input type="radio" name="CoverageStatus_4118" value="3"></td>
-			<td class="bdyOrg"><input type="radio" name="CoverageStatus_4118" value="4"></td>
-			<td class="bdyOrg"><input type="radio" name="CoverageStatus_4118" value="5"></td>
-			<td class="bdyOrg"><input type="radio" name="CoverageStatus_4118" value="6"></td>
-			<td class="bdyOrg"><input type="radio" name="CoverageStatus_4118" value="7"></td>
-			<td class="bdyOrg"><input type="radio" name="CoverageStatus_4118" value="10"></td>
-			<td class="rbdyOrg"><input type="radio" name="CoverageStatus_4118" value="8" checked=""></td>
+			<td class="scrollingt-table-nbsp-td bdyOrg"><input type="radio" name="CoverageStatus_4118" value="1"></td>
+			<td class="scrollingt-table-nbsp-td bdyOrg"><input type="radio" name="CoverageStatus_4118" value="2"></td>
+			<td class="scrollingt-table-nbsp-td bdyOrg"><input type="radio" name="CoverageStatus_4118" value="3"></td>
+			<td class="scrollingt-table-nbsp-td bdyOrg"><input type="radio" name="CoverageStatus_4118" value="4"></td>
+			<td class="scrollingt-table-nbsp-td bdyOrg"><input type="radio" name="CoverageStatus_4118" value="5"></td>
+			<td class="scrollingt-table-nbsp-td bdyOrg"><input type="radio" name="CoverageStatus_4118" value="6"></td>
+			<td class="scrollingt-table-nbsp-td bdyOrg"><input type="radio" name="CoverageStatus_4118" value="7"></td>
+			<td class="scrollingt-table-nbsp-td bdyOrg"><input type="radio" name="CoverageStatus_4118" value="10"></td>
+			<td class="scrollingt-table-nbsp-td rbdyOrg"><input type="radio" name="CoverageStatus_4118" value="8" checked=""></td>
 
-			<td class="bdyOrg"><input type="checkbox" name="PriorAuth_4118" value="True"></td>
-			<td class="bdyOrg"><input type="checkbox" name="QuantLimit_4118" value="True"></td>
-			<td class="bdyOrg"><input type="checkbox" name="StepTher_4118" value="True"></td>
-			<td class="rbdyOrg"><input type="checkbox" name="RestrOther_4118" value="True"></td>
+			<td class="scrollingt-table-nbsp-td bdyOrg"><input type="checkbox" name="PriorAuth_4118" value="True"></td>
+			<td class="scrollingt-table-nbsp-td bdyOrg"><input type="checkbox" name="QuantLimit_4118" value="True"></td>
+			<td class="scrollingt-table-nbsp-td bdyOrg"><input type="checkbox" name="StepTher_4118" value="True"></td>
+			<td class="scrollingt-table-nbsp-td rbdyOrg"><input type="checkbox" name="RestrOther_4118" value="True"></td>
 
-			<td class="bdyOrg"><input type="radio" name="Preferred_4118" value="True"></td>
-			<td class="rbdyOrg"><input type="radio" name="Preferred_4118" value="False"></td>
+			<td class="scrollingt-table-nbsp-td bdyOrg"><input type="radio" name="Preferred_4118" value="True"></td>
+			<td class="scrollingt-table-nbsp-td rbdyOrg"><input type="radio" name="Preferred_4118" value="False"></td>
 
-			<td class="rbdyOrg"><input type="checkbox" id="specialty" name="specialty_4118" value="true"></td>
+			<td class="scrollingt-table-nbsp-td rbdyOrg"><input type="checkbox" id="specialty" name="specialty_4118" value="true"></td>
 
-			<td class="rbdyOrg">
+			<td class="scrollingt-table-reason-code-td rbdyOrg">
 				<select name="ReasonCode_4118" style="color: black; background-color: white; font-size: 12px; font-weight: normal;">
 					<option value="0" selected="">None</option>
 					<option value="1">10-Tier status varies by strength.</option>
@@ -2490,7 +2490,7 @@ function openWindow(winSrc,w,h) {
 					<option value="49">98-No co-pay required.</option>
 				</select>
 			</td>
-			<td class="rbdyOrg"><textarea id="restriction_comments_4118" name="restriction_comments_4118" style="resize:both;height:20px;" rows="1" cols="50" value="" maxlength="255" placeholder="Limit comments to 256 characters."></textarea></td>
+			<td class="scrolling-table-restrictions-comments rbdyOrg"><textarea id="restriction_comments_4118" name="restriction_comments_4118" style="resize:both;height:20px;" rows="1" cols="50" value="" maxlength="255" placeholder="Limit comments to 256 characters."></textarea></td>
 		</tr>
 		<input type="hidden" name="PlanID" value="4118"> 
 
